--- a/simulation.html
+++ b/simulation.html
@@ -89,6 +89,7 @@
     <script src="voltage.js"></script>
     <script src="fieldLines.js"></script>
     <script src="fieldVectors.js"></script>
+    <script src="popup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <script src="simulation.js"></script>
     
